--- a/src/main/resources/scala/api.mustache
+++ b/src/main/resources/scala/api.mustache
@@ -1,18 +1,17 @@
 package {{package}}
 
-import com.wordnik.client.ApiInvoker
-import com.wordnik.client.ApiException
-
 {{#imports}}import {{import}}
 {{/imports}}
-
+import com.wordnik.client.ApiInvoker
+import com.wordnik.client.ApiException
 import scala.collection.mutable.HashMap
 
+{{#operations}}
 class {{classname}} {
   var basePath: String = "{{basePath}}"
   var apiInvoker = ApiInvoker
 
-  {{#vars}}
+  {{#operation}}
   def {{nickname}} ({{#allParams}}{{paramName}}: {{dataType}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}}{{#hasMore}}, {{/hasMore}}{{/allParams}}) {{#returnType}}: Option[{{returnType}}]{{/returnType}} = {
     // create path and map variables
     val path = "{{path}}".replaceAll("\\{format\\}","json"){{#pathParams}}.replaceAll("\\{" + "{{baseName}}" + "\\}",apiInvoker.escapeString({{paramName}}))
@@ -49,5 +48,6 @@ class {{classname}} {
       case ex: ApiException => throw ex
     }
   }
-  {{/vars}}
+  {{/operation}}
 }
+{{/operations}}
