--- a/src/main/resources/ruby/model.mustache
+++ b/src/main/resources/ruby/model.mustache
@@ -16,8 +16,8 @@ class {{classname}}
     # Morph attribute keys into undescored rubyish style
     if attributes.to_s != ""
       {{classname}}.attribute_map.each_pair do |internal, external|
-        if attributes.has_key? external
-          attributes[internal] = attributes.delete(external)
+        if attributes.has_key? external.to_s
+          attributes[internal.to_s] = attributes.delete(external.to_s)
         end
       end
 
