--- a/src/main/resources/objc/api-header.mustache
+++ b/src/main/resources/objc/api-header.mustache
@@ -5,11 +5,10 @@
 
 {{#operations}}
 @interface {{classname}}: NSObject
-NSString* basePath = @"{{basePath}}";
 
 {{#operation}}
--({{returnType}}) {{nickname}} ({{#allParams}}{{dataType}} {{paramName}}
-    {{/allParams}});
+-({{returnType}}) {{nickname}} {{#allParams}}{{#secondaryParam}} {{paramName}}{{/secondaryParam}}:({{{dataType}}}) {{paramName}} {{#hasMore}}{{newline}}{{/hasMore}}{{/allParams}};
+{{newline}}
 {{/operation}}
 {{/operations}}
 @end
