updated socket invoker

--- a/src/main/resources/scala/apiInvoker-socket.mustache
+++ b/src/main/resources/scala/apiInvoker-socket.mustache
@@ -1,24 +1,37 @@
 package com.wordnik.client
 
+import com.wordnik.swaggersocket.client._
 import com.wordnik.swagger.core.util.JsonUtil
-import com.sun.jersey.api.client.Client
-import com.sun.jersey.api.client.ClientResponse
-import com.sun.jersey.api.client.config.ClientConfig
-import com.sun.jersey.api.client.config.DefaultClientConfig
-import com.sun.jersey.api.client.filter.LoggingFilter
 
+import com.wordnik.swaggersocket.protocol._
+import com.wordnik.swaggersocket.client.{ SwaggerSocketException, SwaggerSocketListener, SwaggerSocket }
+
+import org.slf4j.LoggerFactory
+
+import java.util.concurrent._
 import java.net.URLEncoder
-import javax.ws.rs.core.MediaType
 
 import scala.collection.JavaConverters._
 import scala.collection.mutable.HashMap
+import scala.collection.JavaConversions._
 
 object ApiInvoker {
-  val defaultHeaders: HashMap[String, String] = HashMap()
-  val hostMap: HashMap[String, Client] = HashMap()
-
+  val invokers = new HashMap[String, SocketInvoker]()
   def escapeString(value: String): String = {
     URLEncoder.encode(value, "utf-8").replaceAll("\\+", "%20")
+  }
+
+  def invokeApi(host: String, path: String, method: String, queryParams: Map[String, String] = Map(), body: AnyRef, headerParams: Map[String, String]) = {
+    println("invoking " + host.toString + ", " + path + ", " + method + ", " + queryParams + ", " + body.toString + ", " + headerParams.toString)
+    getInvoker(host).invokeApi(path, method, queryParams, body, headerParams)
+  }
+
+  def getInvoker(host: String) = {
+    invokers.getOrElse(host, {
+      val i = new SocketInvoker(host.replaceAll("http", "ws"))
+      ApiInvoker.invokers += host -> i
+      i
+    })
   }
 
   def deserialize(json: String, containerType: String, cls: Class[_]) = {
@@ -39,62 +52,107 @@ object ApiInvoker {
   def serialize(obj: AnyRef): String = {
     if (obj != null) {
       obj match {
-        case e:List[_] => JsonUtil.getJsonMapper.writeValueAsString(obj.asInstanceOf[List[_]].asJava)
+        case e: List[_] => JsonUtil.getJsonMapper.writeValueAsString(obj.asInstanceOf[List[_]].asJava)
         case _ => JsonUtil.getJsonMapper.writeValueAsString(obj)
       }
+    } else null
+  }
+}
+
+class SocketInvoker {
+  val logger = LoggerFactory.getLogger(classOf[SocketInvoker])
+  var ss = SwaggerSocket()
+  var host: String = null
+  var latchs: ConcurrentLinkedQueue[CountDownLatch] = new ConcurrentLinkedQueue[CountDownLatch]
+  var normalClose = false
+  var cleaner: ExecutorService = Executors.newSingleThreadExecutor()
+
+  val defaultHeaders: HashMap[String, String] = HashMap()
+
+  val listener = new SwaggerSocketListener() {
+    override def close {
+      for (cd <- latchs) cd.countDown
+      latchs.clear
+      if (!normalClose) {
+        logger.trace("Socket closed. Re-opening")
+        try {
+          ss = SwaggerSocket().open(new Request.Builder().path(host).build()).listener(this)
+        } catch {
+          case t: Throwable => logger.trace("Re-open exception", t)
+        }
+      }
     }
-    else null
+
+    override def error(e: SwaggerSocketException) {
+      for (cd <- latchs) {
+        cd.countDown
+      }
+      latchs.clear
+      logger.error("Unexpected error {} ", e.getMessage, e)
+    }
+
+    override def message(r: Request, s: Response) {
+      val cd: CountDownLatch = r.attachment match {
+        case l: CountDownLatch => l
+        case _ => throw new ClassCastException
+      }
+
+      r.attach(s.getMessageBody)
+      cd.countDown
+    }
   }
 
-  def invokeApi(host: String, path: String, method: String, queryParams: Map[String, String], body: AnyRef, headerParams: Map[String, String]) = {
-    val client = getClient(host)
+  def this(host: String) = {
+    this()
+    this.host = host
+    println("created invoker with host " + host)
+    ss = ss.open(new Request.Builder().path(host).build()).listener(listener)
+  }
 
-    val querystring = queryParams.filter(k => k._2 != null).map(k => (escapeString(k._1) + "=" + escapeString(k._2))).mkString("?", "&", "")
-    val builder = client.resource(host + path + querystring).`type`("application/json")
+  def invokeApi(path: String, method: String, queryParams: Map[String, String] = Map(), body: AnyRef, headerParams: Map[String, String]) = {
+    println("host: " + host)
+    val cd: CountDownLatch = new CountDownLatch(1)
 
-    headerParams.map(p => builder.header(p._1, p._2))
-    defaultHeaders.map(p => {
-      headerParams.contains(p._1) match {
-        case true => // override default with supplied header
-        case false => if (p._2 != null) builder.header(p._1, p._2)
-      }
-    })
+    val allHeaders = headerParams ++ defaultHeaders
 
-    val response: ClientResponse = method match {
-      case "GET" => {
-        builder.get(classOf[ClientResponse]).asInstanceOf[ClientResponse]
+    val request = new Request.Builder()
+      .path(path)
+      .method(method.toUpperCase)
+      .queryString(queryParams.map(p => new QueryString(p._1, p._2)).toList)
+      .headers(allHeaders.map(h => new Header(h._1, h._2)).toList)
+      .format("JSON")
+      .attach(cd)
+      .body({
+        body match {
+          case data: AnyRef => ApiInvoker.serialize(data)
+          case _ => null
+        }
+      }).build()
+
+    ss.send(request)
+
+    latchs.add(cd)
+    try {
+      if (!cd.await(4 * 60, TimeUnit.SECONDS)) {
+        logger.error("No response after 120 seconds");
+        ""
+      } else {
+        request.attachment.toString
       }
-      case "POST" => {
-        builder.post(classOf[ClientResponse], serialize(body))
-      }
-      case "PUT" => {
-        builder.put(classOf[ClientResponse], serialize(body))
-      }
-      case "DELETE" => {
-        builder.delete(classOf[ClientResponse])
-      }
-      case _ => null
-    }
-    response.getClientResponseStatus() match {
-      case ClientResponse.Status.OK => response.getEntity(classOf[String])
-      case _ => {
-        throw new ApiException(
-          response.getClientResponseStatus().getStatusCode(),
-          response.getEntity(classOf[String]))
-      }
+    } finally {
+
+      cleaner.execute(new Runnable {
+        override def run {
+          latchs.remove(cd)
+        }
+      })
     }
   }
 
-  def getClient(host: String): Client = {
-    hostMap.contains(host) match {
-      case true => hostMap(host)
-      case false => {
-        val client = Client.create()
-        // client.addFilter(new LoggingFilter())
-        hostMap += host -> client
-        client
-      }
-    }
+  def close() {
+    cleaner.shutdownNow()
+    normalClose = true
+    ss.close
   }
 }
 
