--- a/src/main/resources/objc/model-header.mustache
+++ b/src/main/resources/objc/model-header.mustache
@@ -18,7 +18,7 @@
 - (id) {{#vars}}{{name}}: ({{datatype}}) {{name}}{{#hasMore}}{{newline}}     {{/hasMore}}{{^hasMore}};{{/hasMore}}
        {{/vars}}
 {{newline}}
-- (id) initWithDictionary: (NSDictionary*)dict;
+- (id) initWithValues: (NSDictionary*)dict;
 {{newline}}
 @end
 {{/model}}
