--- a/src/main/resources/objc/api-header.mustache
+++ b/src/main/resources/objc/api-header.mustache
@@ -4,10 +4,19 @@
 {{newline}}
 
 {{#operations}}
-@interface {{classname}}: NSObject
+@interface {{classname}}: NSObject {
+
+@private
+    NSOperationQueue *_queue;
+}
+@property(nonatomic, readonly) NSOperationQueue* queue;
 
 {{#operation}}
 -({{returnType}}) {{nickname}} {{#allParams}}{{#secondaryParam}} {{paramName}}{{/secondaryParam}}:({{{dataType}}}) {{paramName}} {{#hasMore}}{{newline}}{{/hasMore}}{{/allParams}};
+-(void) {{nickname}}WithCompletionBlock {{^allParams}}:{{/allParams}}{{#allParams}}{{#secondaryParam}} {{paramName}}{{/secondaryParam}}:({{{dataType}}}) {{paramName}} {{#hasMore}}{{newline}}{{/hasMore}}{{/allParams}}{{newline}}
+        {{#returnBaseType}}completionHandler:(void (^)({{returnType}}, NSError *))completionBlock;{{/returnBaseType}}
+        {{^returnBaseType}}completionHandler:(void (^)(NSError *))completionBlock;{{/returnBaseType}}
+
 {{newline}}
 {{/operation}}
 {{/operations}}
