added asDictionary method to convert objects to json

--- a/src/main/resources/objc/model-body.mustache
+++ b/src/main/resources/objc/model-body.mustache
@@ -24,7 +24,7 @@
     {{/isPrimitiveType}}
     {{#complexType}}
     id {{name}}_dict = [dict objectForKey:@"{{name}}"];
-    if([{{name}}_dict isKindOfClass:[NSArray class]]){
+    if([{{name}}_dict isKindOfClass:[NSArray class]]) {
         if([{{name}}_dict count] > 0) {
             NSMutableArray * objs = [[NSMutableArray alloc] initWithCapacity:[{{name}}_dict count]];
             for (NSDictionary* dict in {{name}}_dict) {
@@ -34,7 +34,7 @@
             _{{{name}}} = [[NSArray alloc] initWithArray:objs];
         }
 		}
-    else {
+    else if([{{name}}_dict count] > 0) {
         _{{name}} = [[{{complexType}} alloc]initWithValues:{{name}}_dict];
     }
     {{/complexType}}
@@ -42,6 +42,32 @@
 
     return self;
 }
+
+-(NSDictionary*) asDictionary {
+    NSMutableDictionary* dict = [[NSMutableDictionary alloc] init];
+    {{#vars}}
+    {{#complexType}}
+    if(_{{name}} != nil){
+        if([_{{name}} isKindOfClass:[NSArray class]]){
+            NSMutableArray * array = [[NSMutableArray alloc] init];
+            for( {{complexType}} * {{name}} in _{{name}}) {
+                [array addObject:[{{name}} asDictionary]];
+            }
+            [dict setObject:array forKey:@"{{baseName}}"];
+        }
+    }
+    else {
+    {{/complexType}}
+        [dict setObject:{{#complexType}}[{{/complexType}}_{{name}} {{#complexType}}asDictionary]{{/complexType}} forKey:@"{{baseName}}"];
+    {{#complexType}}
+    }
+    {{/complexType}}
+    {{/vars}}
+
+    NSDictionary* output = [[dict copy] autorelease];
+    return output;
+}
+
 {{/model}}
 @end
 {{/models}}
