--- a/src/main/resources/objc/model-header.mustache
+++ b/src/main/resources/objc/model-header.mustache
@@ -19,6 +19,7 @@
        {{/vars}}
 {{newline}}
 - (id) initWithValues: (NSDictionary*)dict;
+- (NSDictionary*) asDictionary;
 {{newline}}
 @end
 {{/model}}
