--- a/src/main/resources/objc/model-body.mustache
+++ b/src/main/resources/objc/model-body.mustache
@@ -34,7 +34,10 @@
             _{{{name}}} = [[NSArray alloc] initWithArray:objs];
         }
 		}
-    else if([{{name}}_dict count] > 0) {
+    else if([{{name}}_dict isKindOfClass:[NSDictionary class]] && [{{name}}_dict count] > 0) {
+        _{{name}} = [[{{complexType}} alloc]initWithValues:{{name}}_dict];
+    }
+    else {
         _{{name}} = [[{{complexType}} alloc]initWithValues:{{name}}_dict];
     }
     {{/complexType}}
