--- a/src/main/resources/ruby/api.mustache
+++ b/src/main/resources/ruby/api.mustache
@@ -12,7 +12,8 @@ class {{classname}}
   {{#operation}}
   def self.{{nickname}} ({{#allParams}}{{paramName}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}},{{/allParams}} opts={})
     query_param_keys = [
-      {{#queryParams}}:{{paramName}}{{#hasMore}}, {{/hasMore}}{{/queryParams}}
+      {{#queryParams}}:{{paramName}}{{#hasMore}}, {{/hasMore}}{{^hasMore}}{{newline}}{{/hasMore}}
+      {{/queryParams}}
     ]
 
     {{#requiredParamCount}}
@@ -25,9 +26,9 @@ class {{classname}}
     
     # set default values and merge with input
     options = {
-      {{#allParams}}
-      :{{{paramName}}}=>{{paramName}},
-    {{/allParams}}
+	    {{#allParams}}:{{{paramName}}} => {{paramName}}{{#hasMore}},
+	    {{/hasMore}}
+	    {{/allParams}}
     }.merge(opts)
 
     #resource path
@@ -43,14 +44,27 @@ class {{classname}}
       {{{paramName}}}: {{{paramName}}},
     }
     {{/headerParams}}
+    {{^headerParams}}headers = nil
+    {{/headerParams}}
+    
+    post_body = nil
+    {{#bodyParam}}
+    if body != nil
+      if body.respond_to?("to_body")
+        post_body = body.to_body
+      else
+        post_body = body
+      end
+    end
+    {{/bodyParam}}
 
     {{#returnType}}
-    response = Swagger::Request.new(:{{httpMethod}}, path, {:params=>queryopts,:headers=>nil, :body=>{{#bodyParam}}{{bodyParam}}.to_body{{/bodyParam}}{{^bodyParam}}nil{{/bodyParam}} }).make.body
+    response = Swagger::Request.new(:{{httpMethod}}, path, {:params=>queryopts,:headers=>headers, :body=>post_body }).make.body
     {{#returnContainer}}
     response.map {|response|{{/returnContainer}} {{returnBaseType}}.new(response){{#returnContainer}} }{{/returnContainer}}
     {{/returnType}}
     {{^returnType}}
-    Swagger::Request.new(:{{httpMethod}}, path, {:params=>queryopts,:headers=>nil, :body=>{{#bodyParam}}{{bodyParam}}.to_body{{/bodyParam}}{{^bodyParam}}nil{{/bodyParam}} }).make
+    Swagger::Request.new(:{{httpMethod}}, path, {:params=>queryopts,:headers=>headers, :body=>{{#bodyParam}}{{bodyParam}}.to_body{{/bodyParam}}{{^bodyParam}}nil{{/bodyParam}} }).make
     {{/returnType}}
 {{newline}}
   end
